tests/baselines/reference/moduleResolutionWithExtensions_notSupported.errors.txt
/a.ts(1,17): error TS6142: Module './tsx' was resolved to '/tsx.tsx', but '--jsx' is not set.
/a.ts(2,17): error TS6142: Module './jsx' was resolved to '/jsx.jsx', but '--jsx' is not set.
/a.ts(3,16): error TS6143: Module './js' was resolved to '/js.js', but '--allowJs' is not set.


==== /a.ts (3 errors) ====
    import tsx from "./tsx";
                    ~~~~~~~
!!! error TS6142: Module './tsx' was resolved to '/tsx.tsx', but '--jsx' is not set.
    import jsx from "./jsx";
                    ~~~~~~~
!!! error TS6142: Module './jsx' was resolved to '/jsx.jsx', but '--jsx' is not set.
    import js from "./js";
                   ~~~~~~
!!! error TS6143: Module './js' was resolved to '/js.js', but '--allowJs' is not set.
    
==== /tsx.tsx (0 errors) ====
    
==== /jsx.jsx (0 errors) ====
    
==== /js.js (0 errors) ====
    